phase5/layer4.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: layer4
    version: v1
    app.kubernetes.io/part-of: layers
    app.openshift.io/runtime: nodejs
  name: layer4-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: layer4
      version: v1
  template:
    metadata:
      labels:
        app: layer4
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        image: quay.io/marrober/layers:latest
        imagePullPolicy: Always
        name: layer4
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: layer4
    version: v2
    app.kubernetes.io/part-of: layers
    app.openshift.io/runtime: nodejs
  name: layer4-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: layer4
      version: v2
  template:
    metadata:
      labels:
        app: layer4
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        image: quay.io/marrober/layers:latest
        imagePullPolicy: Always
        name: layer4
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: layer4
    version: v3
    app.kubernetes.io/part-of: layers
    app.openshift.io/runtime: nodejs
  name: layer4-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: layer4
      version: v3
  template:
    metadata:
      labels:
        app: layer4
        version: v3
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        image: quay.io/marrober/layers:latest
        imagePullPolicy: Always
        name: layer4
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: layer4
    version: v4
    app.kubernetes.io/part-of: layers
    app.openshift.io/runtime: nodejs
  name: layer4-v4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: layer4
      version: v4
  template:
    metadata:
      labels:
        app: layer4
        version: v4
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        image: quay.io/marrober/layers:latest
        imagePullPolicy: Always
        name: layer4
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: layer4
    version: v5
    app.kubernetes.io/part-of: layers
    app.openshift.io/runtime: nodejs
  name: layer4-v5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: layer4
      version: v5
  template:
    metadata:
      labels:
        app: layer4
        version: v5
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        image: quay.io/marrober/layers:latest
        imagePullPolicy: Always
        name: layer4
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: layer4
  labels:
    app: layer4    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: layer4
