phase5/layer5.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: layer5
    version: v1
    app.kubernetes.io/part-of: layers
    app.openshift.io/runtime: nodejs
  name: layer5-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: layer5
      version: v1
  template:
    metadata:
      labels:
        app: layer5
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        image: quay.io/marrober/layers:latest
        imagePullPolicy: Always
        name: layer5
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: layer5
    version: v2
    app.kubernetes.io/part-of: layers
    app.openshift.io/runtime: nodejs
  name: layer5-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: layer5
      version: v2
  template:
    metadata:
      labels:
        app: layer5
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        image: quay.io/marrober/layers:latest
        imagePullPolicy: Always
        name: layer5
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: layer5
  labels:
    app: layer5    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: layer5
