phase5/layer6.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: layer6
    version: v1
    app.kubernetes.io/part-of: layers
    app.openshift.io/runtime: nodejs
  name: layer6-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: layer6
      version: v1
  template:
    metadata:
      labels:
        app: layer6
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        image: quay.io/marrober/layers:latest
        imagePullPolicy: Always
        name: layer6
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: layer6
    version: v2
    app.kubernetes.io/part-of: layers
    app.openshift.io/runtime: nodejs
  name: layer6-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: layer6
      version: v2
  template:
    metadata:
      labels:
        app: layer6
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        image: quay.io/marrober/layers:latest
        imagePullPolicy: Always
        name: layer6
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: layer6
  labels:
    app: layer6    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: layer6
