phase5/destination-rule-virtual-service-layer5.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: layer5
spec:
  host: layer5
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: layer5
spec:
  hosts:
  - layer5
  http:
  - match:
    - uri:
        prefix: /call-layers
    - uri:
        exact: /get-info        
    - uri:
        exact: /
    route:
    - destination:
        host: layer5
        port:
          number: 8080
        subset: v1
      weight: 40
    - destination:
        host: layer5
        port:
          number: 8080
        subset: v2
      weight: 60
